@@ -3,7 +3,9 @@
     because SPVM::Hash->new(["foo" => SPVM::Int->new(4)]) is not good interface from Perl code.
     I feel the following is more good code because Perl code and SPVM code is exactly same.
       my $hash = SPVM::Hash->new;
-      $hash->set_int(5);    
+      $hash->set_int(5);
+  - add SPVM::Hash method
+    set_byte, set_short, set_int, set_long, set_float, set_double, get_byte, get_short, get_int, get_long, get_float, get_double
 0.0924 2020-10-16
   - fix echange api string return value bug
   - add real string type. before this relese runtime string type is same as byte[] type, but in this release string type is string type in also runtime
